# TaskScheduler

./: .travis.yml  CMakeLists.txt  Readme.md  Test.cpp  index.html  params.json
cmake/: ProjectConfig.cmake.in
doc/examples/: preview.cpp
doc/preview/: Preview.pdn
include/TaskScheduler/: TaskScheduler.hpp
src/: TaskScheduler.cpp  TaskScheduler.hpp
testing/: Test.cpp
